@@ -9,10 +9,15 @@
 <!-- the name must alphabetically come before jasperreports jar -->
   <artifactId>jasper-extensions</artifactId>
 
-	<name>OpenNMS Integrations Integrations Jasper Extensions</name>
+  <name>OpenNMS Integrations Integrations Jasper Extensions</name>
   <url>http://maven.apache.org</url>
 
   <packaging>bundle</packaging>
+
+  <properties>
+    <skipITs>true</skipITs>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -26,6 +31,27 @@
             <Bundle-Version>${project.version}</Bundle-Version>
           </instructions>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <skipITs>${skipITs}</skipITs>
+          <argLine>-Xmx1g -Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
+          <systemPropertyVariables>
+            <opennms.home>${project.build.testOutputDirectory}</opennms.home>
+            <java.endorsed.dirs>${basedir}/target/endorsed</java.endorsed.dirs>
+          </systemPropertyVariables>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.opennms.maven.plugins</groupId>
